# sc-claude-code-files

./: .gitignore  main.py  pyproject.toml
lesson7_files/: EDA.ipynb  EDA_Refactored.ipynb  README.md  app.py  business_metrics.py  requirements.txt
